fix: details banner not showing when screen is too small

--- a/src/styles/librarybrowser.scss
+++ b/src/styles/librarybrowser.scss
@@ -939,16 +939,9 @@
     }
 }
 
-.layout-mobile,
-.layout-tv {
-    .detailLogo {
-        display: none;
-    }
-}
-
 @media all and (max-width: 68.75em) {
     .detailLogo {
-        display: none;
+        width: 50vw;
     }
 }
 
